# geomodpy

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
examples/: using_geomodpy.ipynb
geomodpy/: __init__.py  fix_macos.py  utils.py
geomodpy/analysis/: __init__.py  distances.py  variography.py
geomodpy/gridding/: __init__.py  geometry.py  structured.py
geomodpy/plotting/: __init__.py  grid.py  variogram.py
geomodpy/simulation/: __init__.py  gaussian.py
geomodpy/upscaling/: __init__.py  sample_upscaler.py
geomodpy/wrapper/: __init__.py  alluvsim.py  fluvsim.py  fracnet.py  gslib.py  snesim.py
geomodpy/wrapper/src/alluvsim/: MAPSpp.for  Makefile  alluvsim.for
geomodpy/wrapper/src/alluvsim/numerical_recipes/: Makefile  locate.f90  nr.f90  nrtype.f90  nrutil.f90  spline.f90  splint.f90  tridag.f90
geomodpy/wrapper/src/fluvsim/: Makefile  fluvsim.for
geomodpy/wrapper/src/fracnet/: Makefile  fracnet.f  fracnet.inc  readcdf.f
geomodpy/wrapper/src/gslib90/: Makefile  cokb3d.for  cokb3d.inc  ik3d.for  kb2d.inc  kt3d.inc  lusim.inc  sgsim.for  sgsim.inc  sisim.for  sisim.inc  sisim_gs.inc  sisim_lm.for  sisim_lm.inc  vargplt.for  varmap.for  vmodel.for
geomodpy/wrapper/src/gslib90/gslib/: Makefile
geomodpy/wrapper/src/snesim/: Makefile  snesim.f
